# mlops_series

./: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
app/: data.py  main.py  train.py
tests/: test_api.py  test_data.py
