[project]
name = "student-score-predictor"
version = "0.1.0"
description = "Student exam score predictor - MLOps Module 1 foundation project"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pre-commit>=3.7",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"